# MIPRO_Reimplementation

./: .gitignore  DemoBootstrapper.py  GroundingHelper.py  InstrProposer.py  LMBackend.py  MIPROOpt.py  MIPROconfig.py  PromptMod.py  QADataset.py  QAProgram.py  README.md  SurrogateOpt.py  VERIFY_MULTI_HOP.md  config.py  logging_config.py  main.py  metrics.py  pyproject.toml  test_grounding.py  todo.txt  view_data.py
backend/: LMBackend.py  __init__.py
cache/: __init__.py  candidate_cache.py
cmd/: __init__.py  download_dataset.py  test_bootstrapper.py  test_config_tiers.py  test_instr_proposer.py
helpers/: DemoBootstrapper.py  GroundingHelper.py  InstrProposer.py  __init__.py
my_selectors/: __init__.py  sentence_selector.py
optimizers/: MIPROOpt.py  SurrogateOpt.py  __init__.py
outputs/: mipro_results.json
programs/: PromptMod.py  QAProgram.py  __init__.py
retrievers/: __init__.py  base.py  cache.py  hotpot_context.py  wikipedia_api.py
