[project]
name = "ai-sys-is"
version = "0.1.0"
description = "MIPRO (Multi-stage Instruction and Prompt Optimization) implementation for a QA pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "datasets",
  "optuna",
  "requests",
  "pyyaml",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

